syntax = "proto3";

package sdc.biceps;

option java_multiple_files = true;
option java_package = "org.somda.sdc.proto.model.biceps";
option java_outer_classname = "AbstractMetricDescriptorProto";

import "sdc/biceps/abstractdescriptor.proto";
import "sdc/biceps/codedvalue.proto";
import "sdc/biceps/extension.proto";
import "sdc/biceps/instanceidentifieroneof.proto";
import "sdc/biceps/entryref.proto";
import "sdc/biceps/metriccategory.proto";
import "sdc/biceps/derivationmethod.proto";
import "sdc/biceps/metricavailability.proto";
import "google/protobuf/duration.proto";

message AbstractMetricDescriptorMsg {
  AbstractDescriptorMsg abstract_descriptor = 1;
  CodedValueMsg unit = 2;
  repeated CodedValueMsg body_site = 3;
  message RelationMsg {
    ExtensionMsg element1 = 1;
    CodedValueMsg code = 2;
    InstanceIdentifierOneOfMsg identification = 3;
    message KindMsg {
      enum EnumType {
        RCM = 0;
        P_S = 1;
        S_S_T = 2;
        E_C_E = 3;
        D_C_E = 4;
        OTH = 5;
      }
      EnumType enum_value = 1;
    }
  KindMsg relation = 4;
    EntryRefMsg a_entries = 5;
  }
  repeated RelationMsg relation = 4;
  MetricCategoryMsg a_metric_category = 5;
  DerivationMethodMsg a_derivation_method = 6;
  MetricAvailabilityMsg a_metric_availability = 7;
  google.protobuf.Duration a_max_measurement_time = 8;
  google.protobuf.Duration a_max_delay_time = 9;
  google.protobuf.Duration a_determination_period = 10;
  google.protobuf.Duration a_life_time_period = 11;
  google.protobuf.Duration a_activation_duration = 12;
}
